# mini-rag-app

./: .gitignore  README.md
backend/: documents.py  main.py  mcp_server.py  pyproject.toml  rag.py
frontend/: package-lock.json
frontend/src/: App.js
